<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/container_bar"
    android:background="#ffaac5e4"
    android:theme="@android:style/Theme.NoTitleBar">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="#ff1e76e4"
        android:paddingLeft="30dp"
        android:weightSum="1"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_seacityapp"
            android:id="@+id/txt_h_title"
            android:textColor="#ffabcce4"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textAlignment="center" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:src="@drawable/ic_cog"
            android:layout_marginLeft="40dp"
            android:background="#ff1e76e4"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/holder_0" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#ffaac5e4"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_location"
            android:id="@+id/textView2"
            android:layout_marginLeft="25dp"
            android:textStyle="bold"
            android:textColor="#ff1e76e4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_translator"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="#ff1e76e4"
            android:layout_marginLeft="110dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:background="#ffaac5e4"
        android:weightSum="1"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/ic_location"
            android:src="@drawable/ic_location_pin"
            android:background="#ffaac5e4"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/icon_location" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_translate"
            android:src="@drawable/ic_translator"
            android:background="#ffaac5e4"
            android:layout_marginLeft="60dp"
            android:layout_weight="0.13"
            android:contentDescription="@string/icon_translator" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#ffaac5e4"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_location_description"
            android:id="@+id/textView"
            android:textColor="#ff050000"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_translator_description"
            android:id="@+id/textView4"
            android:textColor="#ff050000"
            android:layout_marginLeft="75dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#ffaac5e4"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_ScreenReader"
            android:id="@+id/textView5"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="#ff1e76e4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_information"
            android:id="@+id/textView6"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="#ff1e76e4"
            android:layout_marginLeft="60dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:background="#ffaac5e4"
        android:weightSum="1"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/ic_screen"
            android:src="@drawable/ic_screen"
            android:background="#ffaac5e4"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/icon_screenreader" />

        <ImageButton
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:id="@+id/ic_information"
            android:src="@drawable/ic_camera"
            android:background="#ffaac5e4"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/icon_information" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#ffaac5e4"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_screen_description"
            android:id="@+id/textView5"
            android:textColor="#ff050000"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_image_description"
            android:id="@+id/textView6"
            android:textColor="#ff050000"
            android:layout_marginLeft="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#ffaac5e4"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_tracker"
            android:id="@+id/textView7"
            android:layout_weight="0.06"
            android:textStyle="bold"
            android:textColor="#ff1e76e4"
            android:layout_gravity="right"
            android:layout_marginLeft="90dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:background="#ffaac5e4"
        android:weightSum="1"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/ic_progress"
            android:src="@drawable/ic_flag"
            android:background="#ffaac5e4"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/icon_flag"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#ffaac5e4"
        android:layout_gravity="center">

        <TextView
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_progress_description"
            android:id="@+id/textView7"
            android:textColor="#ff050000"
            android:layout_marginLeft="90dp"
            android:layout_weight="0.18" />

    </LinearLayout>

</LinearLayout>